--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="contato">
         <h2>Faça seu pedido!</h2>
         <p>Entre em contato pelo WhatsApp:</p>
-        <a href="https://wa.me/55SEUNUMERO" target="_blank" class="botao">Pedir no WhatsApp</a>
+        <a href="https://wa.me/5561991695963" target="_blank" class="botao">Pedir no WhatsApp</a>
     </section>
 
     <footer>
