--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+<head><meta name="google-site-verification" content="EG3yN4nXriQpNSze1wsYoOACj3bThXKZXqXZdhn1gEE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casal Mourão Doces</title>
