--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head><meta name="google-site-verification" content="EG3yN4nXriQpNSze1wsYoOACj3bThXKZXqXZdhn1gEE" />
     <meta charset="UTF-8">
+    <meta name="description" content="Doces Casal Mourão - Venda de bem casados para casamentos e festas. Entregamos na sua região com muito carinho.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casal Mourão Doces</title>
     <link rel="stylesheet" href="style.css">
