--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head><meta name="google-site-verification" content="EG3yN4nXriQpNSze1wsYoOACj3bThXKZXqXZdhn1gEE" />
+<head>
     <meta charset="UTF-8">
-    <meta name="description" content="Doces Casal Mourão - Venda de bem casados para casamentos e festas. Entregamos na sua região com muito carinho.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casal Mourão Doces</title>
     <link rel="stylesheet" href="style.css">
@@ -16,19 +15,19 @@
     <section class="produtos">
         <h2>Nossos Doces</h2>
         <div class="card">
-            <img src="https://via.placeholder.com/200" alt="Brigadeiro">
+            <img src="Imagens/1.JPG" alt="Brigadeiro">
             <h3>Brigadeiro</h3>
             <p>Delicioso brigadeiro tradicional.</p>
             <p class="preco">R$ 2,50</p>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/200" alt="Beijinho">
+            <img src="Imagens/2.JPG" alt="Beijinho">
             <h3>Beijinho</h3>
             <p>Coco ralado e muito amor!</p>
             <p class="preco">R$ 2,50</p>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/200" alt="Bolo de Pote">
+            <img src="Imagens/3.JPG" alt="Bolo de Pote">
             <h3>Bolo de Pote</h3>
             <p>Sabores variados. Experimente!</p>
             <p class="preco">R$ 8,00</p>
