--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="produtos">
         <h2>Nossos Doces</h2>
         <div class="card">
-            <img src="Imagens/1.JPG" alt="Brigadeiro">
+            <img src="1.JPG" alt="Brigadeiro">
             <h3>Brigadeiro</h3>
             <p>Delicioso brigadeiro tradicional.</p>
             <p class="preco">R$ 2,50</p>
