--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="card">
             <img src="2.JPG" alt="Beijinho">
-            <h3>Beijinho</h3>
+            <h3>Limão siciliano</h3>
             <p>Coco ralado e muito amor!</p>
             <p class="preco">R$ 2,50</p>
         </div>
         <div class="card">
             <img src="3.JPG" alt="Bolo de Pote">
-            <h3>Bolo de Pote</h3>
+            <h3>Casadinho</h3>
             <p>Sabores variados. Experimente!</p>
             <p class="preco">R$ 8,00</p>
         </div>
